Moved Alpine base.